--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -199,7 +199,7 @@ span.proposalNumberSubpunt {
     border-color: black;
 }
 
-.ui-state-grey, .ui-state-grey-not_move {
+.ui-state-grey, .ui-state-grey-not_move, .ui-state-grey-impersonate {
     border: 1px solid #eee;
     position: relative;
     font-weight: normal;
@@ -1214,7 +1214,7 @@ html {
 
 
 
-.Afectat #sortable li , .Membre #sortable li {
+/*.Afectat #sortable li , .Membre #sortable li {
     width: 100%!important;
      padding: 0.4em 0.3em 0.8em 1em !important;
 }
@@ -1222,7 +1222,7 @@ html {
 .Afectat span.proposalNumber , .Membre #sortable li {
     margin-right: 8px!important;
 }
-
+*/
 .span6.einesSpan{
     padding-right: 4px!important;
 }
