--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1626,3 +1626,70 @@ span.estatpunt {
 }
 
 
+.convocada {
+    background-color: #8952ab;
+    padding: 1px 4px 2px;
+    border-radius: 3px;
+    font-weight: bold;
+    line-height: 14px;
+    color: white;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+.tancada {
+    background-color: #007bc0;
+    padding: 1px 4px 2px;
+    border-radius: 3px;
+    font-weight: bold;
+    line-height: 14px;
+    color: white;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+.realitzada {
+    background-color: #456211;
+    padding: 1px 4px 2px;
+    border-radius: 3px;
+    font-weight: bold;
+    line-height: 14px;
+    color: white;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+.planificada {
+    background-color: #FFA500;
+    padding: 1px 4px 2px;
+    border-radius: 3px;
+    font-weight: bold;
+    line-height: 14px;
+    color: white;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+.en_correccio {
+    background-color:  #a62e1f;
+    padding: 1px 4px 2px;
+    border-radius: 3px;
+    font-weight: bold;
+    line-height: 14px;
+    color: white;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+
+
