--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1652,7 +1652,7 @@ span.estatpunt {
     text-align: center !important;
 }
 
-.realitzada, .label-realitzada, .Obert, .label-Obert {
+.realitzada, .label-realitzada, .open_organ, .label-open_organ {
     background-color: #456211 !important;
     padding: 1px 4px 2px !important;
     border-radius: 3px !important;
