--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1490,7 +1490,10 @@ span.estatpunt {
     text-align: center !important;
 }
 
-.realitzada, .label-realitzada, .open_organ, .label-open_organ {
+.realitzada, .label-realitzada,
+.open_organ, .label-open_organ,
+.Obert, .label-Obert
+{
     background-color: #456211 !important;
     padding: 1px 4px 2px !important;
     border-radius: 3px !important;
