--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1381,7 +1381,7 @@ span.barra {
     min-width: 0px!important;
     margin: 0px!important;
     padding: 0px!important;
-    height: 21px;
+    /*height: 21px;*/
 }
 
 .subpuntTitle .span9 {
