--- a/genweb/organs/browser/stylesheets/print.css
+++ b/genweb/organs/browser/stylesheets/print.css
@@ -1,9 +1,18 @@
 @media print {
 
-  html, body {
+  body {
     width: 210mm; height: 297mm;
-    font-size: 11pt;
+    margin: 0mm 2mm 20mm 5mm;
+  }
+
+  html, body {
+    font-size: 15pt!important;
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 130% !important;
+  }
+
+li {
+    line-height: 130% !important;
   }
 
   nav#portal-breadcrumbs,
@@ -64,7 +73,7 @@
   .plain a {
     color:#555555;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 12pt;
   }
 
   h1, h2, h3 {
@@ -91,7 +100,7 @@
   }
 
   h4 {
-    font-size:14pt !important;
+    font-size:15pt !important;
   }
 
   .caixa {
@@ -99,7 +108,10 @@
     vertical-align: top;
   }
 
-  table {font-size: 8pt;}
+  table {
+    font-size: 15pt !important;
+    line-height: : 120% !important;
+  }
 
   h1.h1Print {
     text-align: left;
@@ -122,7 +134,8 @@
   }
 
   tbody {
-    font-size: 11pt !important;
-    font-family: Arial, Helvetica, sans-serif !important;}
+    font-size: 15pt !important;
+    font-family: Arial, Helvetica, sans-serif !important;
+    line-height: 130% !important;}
 
 }
