--- a/genweb/organs/browser/stylesheets/print.css
+++ b/genweb/organs/browser/stylesheets/print.css
@@ -110,7 +110,7 @@ li {
 
   table {
     font-size: 15pt !important;
-    line-height: : 120% !important;
+    line-height: 120% !important;
   }
 
   h1.h1Print {
