--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1618,3 +1618,11 @@ dd.actionMenuContent.actionMenuContentColor {
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
+
+.box-search {
+    background-color: white;
+border: 1px solid #ccc;
+padding-top: 18px;
+}
+
+.span4search {width: 29.288834% !important;}
