--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1621,8 +1621,8 @@ dd.actionMenuContent.actionMenuContentColor {
 
 .box-search {
     background-color: white;
-border: 1px solid #ccc;
-padding-top: 18px;
+    border: 1px solid #ccc;
+    padding-top: 18px;
 }
 
-.span4search {width: 29.288834% !important;}
+.noborder {border-bottom: 0px;}
