added new header logo

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1644,6 +1644,12 @@ dd.actionMenuContent.actionMenuContentColor {
 .portaltype-genweb-organs-sessio .modal-body {overflow-y: initial !important;}
 /* End problems cleantheme */
 
+.header-image {
+  background-image: url("++resource++genweb.organs.stylesheets/capcalera_organs.jpg") !important;
+
+}
+
+
 
 @media only screen and (max-width: 639px) {
     .header-image {
@@ -1663,6 +1669,7 @@ div.header-image.nomarginleft {
 @media only screen and (-webkit-min-device-pixel-ratio: 2), not all, not all, not all, only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
 .header-image {
      background-size: auto !important;
+      background-image: url("++resource++genweb.organs.stylesheets/capcalera_organs@2x.jpg") !important;
 }
 }
 
