added translations and change mail receptor in travis temp checks

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -98,7 +98,8 @@ input#form-widgets-horaInici,
 input#form-widgets-horaFi,
 input#form-widgets-IBasic-title,
 input#form-widgets-acronim,
-input#form-widgets-fromMail ,
+input#form-widgets-fromMail,
+input#form-widgets-eventsColor,
 input#form-widgets-adrecaLlista ,
 input#form-widgets-any,
 input#form-widgets-numSessio,
