--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1632,9 +1632,10 @@ dd.actionMenuContent.actionMenuContentColor {
 }
 
 .box-search {
-    background-color: white;
+    background-color: #f3f3f3;
     border: 1px solid #ccc;
     padding: 18px 15px 0px 15px;
+    box-shadow: 3px 3px 4px 1px #e2e2e2;
 }
 
 .noborder {border-bottom: 0px;}
